--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "apuntes",
   "version": "1.0.0",
   "description": "",
-  "main": ".src/index.js",
+  "main": "/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ".src/node index.js"
+    "start": "/src/node index.js"
   },
   "keywords": [],
   "author": "",
