--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "apuntes",
+  "name": "mercado liebre",
   "version": "1.0.0",
   "description": "",
   "main": "/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "/src/node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
