--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mercadoliebre",
+  "name": "DH-Mercado-liebre",
   "version": "1.0.0",
   "description": "",
-  "main": "/src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node ./src/index.js",
   },
   "keywords": [],
-  "author": "",
+  "author": "NicolasAlecci",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
